# interoperability

./: README.md  pyproject.toml  setup.py
interoperability/: clone_experiment.py  env_config  europeana.py  europeana_config.py  openaire.py  run_europeana_acquisition.sh
interoperability/etl/: extracting.py  mappings.py  transforming.py
